syntax = "proto3";

package node;


import "google/protobuf/empty.proto";

//------------------节点信息模块------------------------------------------
service NodeService {
    // 获取主节点信息
    rpc GetMaster(google.protobuf.Empty) returns (GetMasterResponse);
    // 心跳检测
    rpc HeartBeat(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message GetMasterResponse {
    // 服务器地址
    string Url =1;
    // 节点ID
    string NodeId =2;
}
